--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Steampod</title>
+    <title>Ripley - Steampod</title>
     <!-- CSS BOOSTRAP 5 -->
     <link rel="stylesheet" href="assets/css/bs-5.css" />
     <!-- CSS OWL CAROUSEL -->
